2017-07-01  Julien Bect  <julien.bect@centralesupelec.fr>

	stk_plot_probdom2d.m: New function

	* utils/stk_plot_probdom2d.m: New function to represent the
	uncertainty about a 2D Pareto front.  This function is currently
	considered experimental and should not be expected to produce a
	reliable representation of the uncertainty for difficult or
	high-dimensional optimization problems.
	* examples/03_miscellaneous/stk_example_misc04.m: Update the
	example to use the new function.
	* admin/octpkg/INDEX: Add the new function to the INDEX.

	@stk_model_gpposterior/stk_generate_samplepaths.m: Overload base

	* core/@stk_model_gpposterior/stk_generate_samplepaths.m: New
	function, overload base STK function.

	Remove all occurences of response_name

	* core/stk_model.m: Do not mention response_name as an optional
	field, since it isn't used anywhere in STK now.
	* examples/03_miscellaneous/stk_example_misc04.m: No more
	response_name.

	Return a plain numerical array from stk_generate_samplepaths

	* utils/stk_generate_samplepaths.m: Return a plain double
	precision numerical array; no more data frames here.
	* arrays/@stk_dataframe/stk_generate_samplepaths.m: Removed.
	* examples/03_miscellaneous/stk_example_misc04.m: Updated.
	* admin/octpkg/INDEX: Update the INDEX.

	@stk_model_gpposterior/stk_model_gpposterior.m: Check xi

	* core/@stk_model_gpposterior/stk_model_gpposterior.m: Check the
	number of columns of input argument xi.

	Move important plotting functions to 'utils' directory

	* misc/plot/stk_plot1d.m: Moved to 'utils' directory.
	* misc/plot/stk_plot_histnormres.m: Idem.
	* misc/plot/stk_plot_predvsobs.m: Idem.
	* utils/stk_plot1d.m: Moved from 'misc/plot' directory.
	* utils/stk_plot_histnormres.m: Idem.
	* utils/stk_plot_predvsobs.m: Idem.

2017-06-29  Julien Bect  <julien.bect@centralesupelec.fr>

	Add a new test case named 'truss3'

	* examples/test_functions/stk_testcase_truss3.m: New function.