@@ -1,3 +1,11 @@
+2017-07-02  Julien Bect  <julien.bect@centralesupelec.fr>
+
+	@stk_dataframe/stk_dataframe.m: Accept char colnames/rownames
+
+	* arrays/@stk_dataframe/stk_dataframe.m: Tolerate char arguments
+	instead of cells for column and row names in the special case
+	where the expected number of elements is one.
+
 2017-07-01  Julien Bect  <julien.bect@centralesupelec.fr>
 
 	stk_plot_probdom2d.m: New function
